--- a/actions/deploy/k8s/action.yaml
+++ b/actions/deploy/k8s/action.yaml
@@ -63,6 +63,7 @@ runs:
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} KCR_USER | KCR_USER;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} KCR_PASSWORD | KCR_PASSWORD;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} IMAGE_REPOSITORY | IMAGE_REPOSITORY;
+        ${{ inputs.VAULT_SECRETS_CICD_PATH }} K8S_CLUSTER_INFRA | K8S_CLUSTER_INFRA;
   
   - name: Import Secrets From Vault for EKS
     if: ${{ env.K8S_CLUSTER_INFRA == 'EKS' }}
