--- a/actions/deploy/manager/action.yaml
+++ b/actions/deploy/manager/action.yaml
@@ -44,6 +44,7 @@ runs:
           ${{ inputs.VAULT_SECRET_COMMON_PATH }} LOCAL_SETTINGS_NAME | LOCAL_SETTINGS_NAME;
           ${{ inputs.VAULT_SECRET_COMMON_PATH }} ENVIRONMENT | ENVIRONMENT;
           ${{ inputs.VAULT_SECRET_COMMON_PATH }} MANAGER_NODE_IP | MANAGER_NODE_IP;
+          ${{ inputs.VAULT_SECRET_COMMON_PATH }} WORK_DIR | WORK_DIR;
           ${{ inputs.VAULT_SECRETS_CICD_PATH }} DEPLOY_USER | DEPLOY_USER;
           ${{ inputs.VAULT_SECRETS_CICD_PATH }} SSH_KEY | SSH_KEY;
           ${{ inputs.VAULT_SECRETS_CICD_PATH }} GITLAB_TOKEN | GITLAB_TOKEN;
