--- a/actions/deploy/k8s/action.yaml
+++ b/actions/deploy/k8s/action.yaml
@@ -143,7 +143,7 @@ runs:
     shell: bash
   
   - name: Create autoscaler secret
-    if: ${{ env.AUTOSCALER == "enabled" }}
+    if: ${{ env.AUTOSCALER == "true" }}
     uses: hashicorp/vault-action@v2
     with:
       url: https://${{ inputs.VAULT_SERVER }}/
