--- a/actions/security/sast/action.yaml
+++ b/actions/security/sast/action.yaml
@@ -179,7 +179,7 @@ runs:
       run: |
         wget -q https://static.snyk.io/cli/latest/snyk-linux && mv ./snyk-linux ./snyk && chmod +x ./snyk
         ./snyk auth ${{ env.SNYK_TOKEN }}
-        ./snyk test --file=${{ github.workspace }}/app/requirements/base.txt --project-name=${{ inputs.PROJECT_NAME }} --package-manager=pip --sarif-file-output=snyk.sarif ${{ inputs.EXTRA_ARGS}}
+        ./snyk test --file=${{ inputs.PYTHON_DEP_PATH }} --project-name=${{ inputs.PROJECT_NAME }} --package-manager=pip --sarif-file-output=snyk.sarif ${{ inputs.EXTRA_ARGS}}
       working-directory: ${{ inputs.PROJECT_APP_PATH }}
       shell: bash
 
