--- a/actions/unit-testing/python/action.yaml
+++ b/actions/unit-testing/python/action.yaml
@@ -32,8 +32,8 @@ inputs:
 runs:
   using: composite
   steps:
-    - name: CheckOut Actions
-      uses: actions/checkout@v3
+    #- name: CheckOut Actions
+    #  uses: actions/checkout@v3
 
     - name: Setup Python ${{ inputs.PYTHON_VERSION }}
       uses: actions/setup-python@v4
