--- a/actions/unit-testing/python/action.yaml
+++ b/actions/unit-testing/python/action.yaml
@@ -44,6 +44,7 @@ runs:
     - name: Install requirements
       run: |
         pip install --upgrade pip
+        pip install pytest
         pip install -r ${{ inputs.PYTHON_DEP_PATH }}
       shell: bash
 
