--- a/actions/security/infra/action.yaml
+++ b/actions/security/infra/action.yaml
@@ -49,7 +49,7 @@ runs:
       uses: aquasecurity/trivy-action@master
       with:
         scan-type: fs
-        scan-ref: ${{ github_workspace }}/infrastructure/k8s/
+        scan-ref: infrastructure/k8s/
         severity: CRITICAL
         format: table
         output: 'trivy-results.sarif'
