--- a/actions/security/infra/action.yaml
+++ b/actions/security/infra/action.yaml
@@ -70,7 +70,7 @@ runs:
     - name: Terraform Code Quality
       continue-on-error: true
       run: |
-        checkov --directory ${{ github.workspace }}/terraform/ --quiet --output github_failed_only --enable-secret-scan-all-files --no-fail-on-crash > quality
+        checkov --directory ${{ github.workspace }}/terraform/ --quiet --output github_failed_only --enable-secret-scan-all-files --no-fail-on-crash --check CRITICAL> quality
       shell: bash
 
     - name: PR comment with Terraform Quality check file
