--- a/actions/security/infra/action.yaml
+++ b/actions/security/infra/action.yaml
@@ -42,25 +42,15 @@ runs:
 
     - name: Scan Helm Charts
       run: |
-        trivy fs --scanners vuln,secret,misconfig ${{ github.workspace }}/k8s/ -s CRITICAL
+        trivy fs --scanners vuln,secret,misconfig ${{ github.workspace }}/k8s/ -s CRITICAL --format table --output scan-results
       shell: bash
 
-    # - name: Scan Helm Charts
-    #   uses: aquasecurity/trivy-action@master
-    #   with:
-    #     scan-type: fs
-    #     scan-ref: '.'
-    #     severity: CRITICAL
-    #     format: table
-    #     output: 'trivy-results.sarif'
-      
-    # - name: PR comment with file trivy
-    #   uses: thollander/actions-comment-pull-request@v2
-    #   with:
-    #     filePath: trivy-results.sarif
-    #     reactions: eyes      
-
-
+    - name: PR comment with file trivy
+      uses: thollander/actions-comment-pull-request@v2
+      with:
+        filePath: scan-results
+        reactions: eyes 
+  
     - name: Terraform Format check
       continue-on-error: true
       run: |
