zap host and port from vault

--- a/actions/security/dast/action.yaml
+++ b/actions/security/dast/action.yaml
@@ -34,6 +34,8 @@ runs:
         tlsSkipVerify: true
         secrets: |
           ${{ inputs.VAULT_SECRETS_PATH }} API_KEY | API_KEY;
+          ${{ inputs.VAULT_SECRETS_PATH }} ZAP_HOST | ZAP_HOST;
+          ${{ inputs.VAULT_SECRETS_PATH }} ZAP_PORT | ZAP_PORT;
 
     - name: Checkout Repository
       uses: actions/checkout@v2
