--- a/actions/security/dast/action.yaml
+++ b/actions/security/dast/action.yaml
@@ -54,7 +54,7 @@ runs:
 
     - name: Run ZAP Scan
       run: |
-        python  ${{ github.action_path }}/scripts/unauthenticated.py -ph ${{ env.ZAP_HOST }} -pp ${{ env.ZAP_PORT }} ${{ env.TARGET }} ${{ env.API_KEY }} 
+        python  ${{ github.action_path }}/scripts/unauthenticated.py -ph ${{ env.ZAP_HOST }} -pp ${{ env.ZAP_PORT }} ${{ env.TARGET }} ${{ env.API_KEY }} -s
       shell: bash
 
       
