added registry credentials

--- a/actions/security/dast/action.yaml
+++ b/actions/security/dast/action.yaml
@@ -36,6 +36,9 @@ runs:
           ${{ inputs.VAULT_SECRETS_PATH }} API_KEY | API_KEY;
           ${{ inputs.VAULT_SECRETS_PATH }} ZAP_HOST | ZAP_HOST;
           ${{ inputs.VAULT_SECRETS_PATH }} ZAP_PORT | ZAP_PORT;
+          ${{ inputs.VAULT_CICD_PATH }} KCR_USER | KCR_USER;
+          ${{ inputs.VAULT_CICD_PATH }} KCR_PASSWORD | KCR_PASSWORD;
+          ${{ inputs.VAULT_CICD_PATH }} IMAGE_REPOSITORY | IMAGE_REPOSITORY;
     
     - name: Setup Environment
       uses: actions/setup-python@v2
