changed scan type

--- a/actions/security/dast/action.yaml
+++ b/actions/security/dast/action.yaml
@@ -52,7 +52,7 @@ runs:
 
     - name: Run ZAP Scan
       run: |
-        python  ${{ github.action_path }}/scripts/zap_scan.py -ph ${{ env.ZAP_HOST }} -pp ${{ env.ZAP_PORT }} ${{ env.TARGET }} -k ${{ env.API_KEY }} -s
+        python  ${{ github.action_path }}/scripts/zap_scan.py -ph ${{ env.ZAP_HOST }} -pp ${{ env.ZAP_PORT }} ${{ env.TARGET }} -k ${{ env.API_KEY }} -as
       shell: bash
 
       
